# tauri-plugin-redb-cache

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
guest-js/: README.md  index.ts  package.json  tsconfig.json
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: cache_clean_expired.toml  cache_clear.toml  cache_get.toml  cache_info.toml  cache_list.toml  cache_ns_clear.toml  cache_ns_get.toml  cache_ns_get_batch.toml  cache_ns_get_by_prefix.toml  cache_ns_remove.toml  cache_ns_remove_by_prefix.toml  cache_ns_set.toml  cache_ns_set_batch.toml  cache_remove.toml  cache_set.toml  image_cache_clean_expired.toml  image_cache_clear.toml  image_cache_get.toml  image_cache_info.toml  image_cache_list.toml  image_cache_remove.toml  image_cache_set.toml
permissions/schemas/: schema.json
src/: cache.rs  commands.rs  config.rs  lib.rs  ns_cache.rs
