[package]
name = "tauri-plugin-redb-cache"
version = "0.1.1"
description = "A Tauri plugin for HTTP and image caching using Redb with LRU memory cache and compression"
authors = ["BiShen <bishen@live.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/bishen/tauri-plugin-redb-cache"
homepage = "https://www.suanjinshan.com/"
keywords = ["tauri", "plugin", "cache", "redb", "offline"]
categories = ["caching", "database"]

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# 缓存核心依赖
redb = "2.1"
lru = "0.12"
rmp-serde = "1.3"
flate2 = "1.0"
dirs = "5"

# No build dependencies needed for simple plugins
